@@ -6,7 +6,7 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/10/08 13:10:20 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/18 14:51:35 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/19 21:51:23 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -319,6 +319,6 @@ char					*concatenate_data(t_here_doc **head);
 
 /************************************************************************/
 /*************************STATUS_setter**********************************/
-void	status_setter(int status);
+int						status_setter(int code, int mode);
 /************************************************************************/
 #endif
